make the tag & btn have a full bleed option and fix issues

--- a/src/styles/reusable.css
+++ b/src/styles/reusable.css
@@ -33,6 +33,10 @@
   color: var(--clr-primary-900);
   transition: 300ms ease;
 
+  &[data-size="full-bleed"] {
+    width: 100%;
+  }
+
   &[data-type="outline"] {
     background-color: transparent;
     outline: solid 2px var(--clr-primary-900);
@@ -54,11 +58,16 @@
 .tag {
   background-color: var(--clr-primary-400);
   font-weight: bold;
+  cursor: pointer;
   font-family: var(--ff-base);
   border: none;
   border-radius: 4px;
   padding: 7px 18px;
   color: var(--clr-primary-900);
+
+  &[data-size="full-bleed"] {
+    width: 100%;
+  }
 
   &[data-type="outline"] {
     background-color: transparent;
@@ -66,6 +75,11 @@
   }
   &[data-type="accent"] {
     background-color: var(--clr-accent-400);
+  }
+
+  &:hover,
+  &:focus {
+    background-color: var(--clr-primary-200);
   }
 }
 
